$Amigan: fakedbfs/CHANGELOG,v 1.28 2006/04/01 23:51:47 dcp1990 Exp $

Changelog

2.0.0-RELEASE ("Doctor Wu")
*fdbfs_fields_set_mime() added (genericised interface for setting mime type)
*Negated regex operator (!~) added to queries, albeit hackishly
*Separated notion of catalogues and definitions; major DB format changes that are incompatible.
*Added -n option to fquery to be like find(1) with -print0
*Added conf functionality to fedit
*Wrote manpage for fedit
*Added bigint, usbigint types, made datime always use 64bits, even on platforms with 4 byte time_t
*Added ctime field to database
*Plugin API changed; now passed an fdbfs_t*
*Added support for FLAC and ogg vorbis tags to music plugin
*Fixed bugs with extracting data from filenames for music plugin
*Fixed path bugs with indexer
*New logo. YEAH!!!!
*THE GREAT RENAMING....most symbols start with fdbfs_ now, and stuff has been split up. Major changes.
*doxygen API docs...finally!
*Thanks to fez (new amd64 workstation), this code should now be mostly 64bit clean. I also made some changes to ficl to make it 64bit clean.
 I submitted those patches to the ficl team. Hopefully they will be integrated.
*ficl has been imported into the tree and work started; see libfakedbfs/ficl.c
*answer_t members have been consolidated into a union to save space. This may cause problems; we'll see
*freg now supports substrings; the API has changed to support this. See the freg_* functions.
*configuration subsystem added
*mime field now mandatory in database; this is possibly incompatible.

1.1.0-RELEASE ("Bodhisattva")
*All indexing functions now accept a last argument, def, for default fields. This is to facilitate our default spec parser for findex(1).
*Makefiles should work with gmake
*Introduced new usnumber element into DataType enum. This shouldn't require the database to be redone, since it's the last element.
*Introduced time datatype for lastupdate, along with support for it in fquery(1)